--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "date-and-time": "^1.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "firebase": "^8.6.3",
+    "firebase": "^8.10.0",
     "g": "^2.0.1",
+    "generate-password": "^1.7.0",
     "joi": "^17.4.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.7",
