--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/node": "^7.14.2",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.14.2",
     "@babel/register": "^7.16.0",
@@ -27,7 +25,11 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.16.0",
     "@babel/plugin-transform-async-to-generator": "^7.13.0",
+    "babel-jest": "^27.4.2",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15"
   },
