--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PARENT_EMAIL=croynbernard2016@gmail.com
-PARENT_PASSWORD=bernardabc123
+PARENT_EMAIL=primecsadmission@gmail.com
+PARENT_PASSWORD=Hr^P$k%pe
