--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "generate-password": "^1.7.0",
     "joi": "^17.4.0",
     "mocha": "^9.1.3",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.7",
     "regenerator-runtime": "^0.13.9",
     "uuid": "^8.3.2"
